# GP2

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/gestore_password/: main.py
src/gestore_password/controller/: __init__.py  controller_aggiungi_servizio.py  controller_login.py  controller_modifica_servizio.py  controller_modifica_utente.py  controller_principale.py  controller_registrati.py  registrati_controller.py
src/gestore_password/modelli/: __init__.py
src/gestore_password/ui/: login.ui  modifica_profilo.ui  modifica_servizio.ui  registrati.ui  ui_aggiungi_servizio.ui  ui_login.ui  ui_modifica_profilo.ui  ui_modifica_servizio.ui  ui_principale.ui  ui_registrati.ui
src/gestore_password/utility/: __init__.py  criptatore.py  gestore_database.py  gestore_path.py
src/gestore_password/views/: __init__.py  modifica_profilo.py  modifica_servizio.py  registrati.py  ui_aggiungi_servizio.py  ui_login.py  ui_principale.py  ui_registrati.py  view_aggiungi_servizio.py  view_login.py  view_modifica_profilo.py  view_modifica_servizio.py  view_principale.py  view_registrati.py
src/ui/: aggiungi_servizio.ui  aggiungi_servizionew.ui  principale.ui
tests/: test_criptatore.py  test_gestore_database.py
