[project]
name = "gestore-password"
version = "2.0"
description = ""
authors = [
    {name = "fgirlanda",email = "f.girlanda22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
