[project]
name = "gestore-password"
version = "2.0"
description = ""
authors = [
    {name = "fgirlanda",email = "f.girlanda22@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.10.0,<7.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
