[project]
name = "gestore-password"
version = "2.0"
description = ""
authors = [
    {name = "fgirlanda",email = "f.girlanda22@gmail.com"}
]
readme = "README.md"
requires-python = ">3.9.0,<3.9.1 || >3.9.1"
dependencies = [
    "pyqt6 (==6.4.2)",
    "pyqt6-tools (>=6.4.2.3.3,<7.0.0.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]

[tool.poetry]
name = "gestore-password"
version = "0.1.0"
packages = [
  { include = "gestore_password", from = "src"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
